# ChangeLog for dev-perl/WWW-RobotRules
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/WWW-RobotRules/ChangeLog,v 1.22 2013/09/14 14:33:13 idella4 Exp $

*WWW-RobotRules-6.10.0-r1 (14 Sep 2013)

  14 Sep 2013; Ian Delaney <idella4@gentoo.org>
  +WWW-RobotRules-6.10.0-r1.ebuild:
  revbump -> EAPI 5

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  Add ~arm-linux keyword.

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  05 May 2012; Alexis Ballier <aballier@gentoo.org>
  WWW-RobotRules-6.10.0.ebuild:
  keyword ~amd64-fbsd

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  18 Dec 2011; Mark Loeser <halcy0n@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  Stable for ppc64; bug #386309

  19 Nov 2011; Raúl Porcel <armin76@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #386309

  08 Nov 2011; Tony Vroon <chainsaw@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in security bug #386309.

  07 Nov 2011; Jeroen Roovers <jer@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  Stable for HPPA (bug #386309).

  06 Nov 2011; Markus Meier <maekke@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  arm stable, bug #386309

  06 Nov 2011; Andreas Schuerch <nativemad@gentoo.org>
  WWW-RobotRules-6.10.0.ebuild:
  x86 stable, bug 386309. Thanks Myckel Habets.

  06 Nov 2011; Brent Baude <ranger@gentoo.org> WWW-RobotRules-6.10.0.ebuild:
  Marking WWW-RobotRules-6.10.0 ppc stable for bug 386309

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  WWW-RobotRules-6.10.0.ebuild:
  Marked ~ppc/~ppc64 wrt #358079

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  WWW-RobotRules-6.10.0.ebuild:
  keyword ~x86-fbsd, bug #358079
