@@ -2,14 +2,14 @@
 Hash: SHA256
 
 DIST WWW-RobotRules-6.01.tar.gz 9047 SHA256 f817e3e982c9d869c7796bcb5737c3422c2272355424acd162d0f3b132bec9d3 SHA512 41f7669cbb284b29ffba7f99b65bfe1b5605e7fe135d7d165e7c2ac017e02c7ff570115733fcab12a83e1497607067447541cba982277ee9afcae4a8e071e051 WHIRLPOOL e5c125d6c7f56849b31be22451eed1ec724df763be56c0f94b9d26f3a5238ad2cf9a7f9b8c198b48f27186299fadcbcf70fc9f2cf17ac87354bf21f15131f1c9
-EBUILD WWW-RobotRules-6.10.0-r1.ebuild 717 SHA256 cff9792ddfce1fa15a08e9b0bfd23d72304a1472272bef1807d707a2c35c7418 SHA512 baa53a01f24f35e1ba65afef5290b09d41177666860076e595808a7e2ded816358901cf65430e24db5e836d60ef8bf2b6e8bbeb1a454b860e86804f9fe3f2cc3 WHIRLPOOL 471337f594eedc4dcee76a614d63867b1ddf5f57bfbc7bd15286eacbf394c44b7c6cdd4a690675df731dd3db7ade58dbdb7550456f7b1db23a37a390cfc4b576
+EBUILD WWW-RobotRules-6.10.0-r1.ebuild 712 SHA256 350c9ced12f7eb4a1737dd0c59eb16d176f1b338860a99b935f757b9286786b1 SHA512 40b4f74ee0b1d62b3776a7b9f3662dff9f9acd0f1db13df663daf64e64a5d44807b70cac69390eaf4bd07d461a068a24bfe57709150bd0500a9089c37ced2035 WHIRLPOOL c9d922d9260ae86c177c2a039a8cb002526531df8876e4f44e611b84d61eaadda66209db4b9e96740d5d9469e159f6e7b549203433db87dc398d11ac88c9abd9
 EBUILD WWW-RobotRules-6.10.0.ebuild 703 SHA256 f5560d54f517df402e4893f53608b2939d685fb8ac0375732cafc102a48e7793 SHA512 913fbf9909840f6913638ad60f0e6db7f2214be905a2e9c851e0191f6e5f0d85f5091254f59a9ee0ee2317fbec825fd2caa8043a5944f9fb1e233b894d8090ae WHIRLPOOL 764168be2e80e84e75fce8a3a35841c4c4c1d0b06a109c69a6996947e6825c78339a7ed214e7e99d5ef97b66dbb0219c8e98f14138567d21650031bd5a4e6996
-MISC ChangeLog 2936 SHA256 0b0ff4d8aa22c5ec4ee318ae37ebadba1426ea9b8ab8f791ee8fc469b8f8660e SHA512 0e7c5da1be59c1bad5a072768036801d3946a8dcc211e80b0a96924507d394c41cb083768ff64e44544c6d0494395c642e4414cb1b5f78cd042442d2b9386dd7 WHIRLPOOL 4c62f493309e73c4c5fc547b222df25bff42688e5d19b775545a0f163482f3c24b7534e515798126cbb09f15dca77026ae10196b97fc2ea361e8770ff64377d2
+MISC ChangeLog 3046 SHA256 1999b234a867a5debfcf578020acca7ecfeeb5fa34f28e37120a0f782f821ecc SHA512 67c511568746b1fe825578e935d7c2ff82aba79dff4b32408729008309940b73d1a3cf7e2bfabf8df910d2d12b8c6f8e40e2de6bfd390e977a000a1e5266783b WHIRLPOOL 3cb610ca37371484ba90a02d75f64efafe667bd2061194edf932abb4c6844ad8c6310a1f8de99c4fc8fec0d3392ae97064569fa721887c7ca31bf5645ae61398
 MISC metadata.xml 436 SHA256 957d19ecbb856533c89ec530854da2aad4701b801426fff1663f796ad55cb8f5 SHA512 0fb28e749768b9f3ae4c0a416be02c4b3ef0efaacb2603e724975db339e27a91b903e49edd826b0a7e9b965648d654a3f3a93e28dabb88efaf80d92a48d84f31 WHIRLPOOL 068899b6292f6d75a68bcba742fef00b14f2bd28faba849737e62bc64fe0050be09c839d3b141145b03a4c35e412752d2ada090bf6cf2a43a3a989c191fbfc8f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlI0dIAACgkQso7CE7gHKw3WKwCgvZnKXnfYjMULpz0GMUd1XRDO
-dlEAn3orVinMIctTuFPvaN2Qv3dmp3a0
-=K7OP
+iEYEAREIAAYFAlLEPYEACgkQVWmRsqeSphMiXQCfcPalckmI8YZokDXaZ4Ew0hGu
+XroAniWR6MoXRSH0G/Q0fT2jUhKlv6by
+=aPte
 -----END PGP SIGNATURE-----
