@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/WWW-RobotRules
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/WWW-RobotRules/ChangeLog,v 1.22 2013/09/14 14:33:13 idella4 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/WWW-RobotRules/ChangeLog,v 1.23 2014/01/01 16:08:31 jer Exp $
+
+  01 Jan 2014; Jeroen Roovers <jer@gentoo.org> WWW-RobotRules-6.10.0-r1.ebuild:
+  Stable for HPPA (bug #495508).
 
 *WWW-RobotRules-6.10.0-r1 (14 Sep 2013)
 
